--- a/app/src/main/res/layout/fragment_kisi_ekle.xml
+++ b/app/src/main/res/layout/fragment_kisi_ekle.xml
@@ -8,6 +8,21 @@
     tools:context=".Fragment.KisiEkleFragment" >
 
     <EditText
+        android:id="@+id/kisiEkle_aciklama"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:hint="Açıklama"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/kisiEkle_tel_no_text" />
+
+    <EditText
         android:id="@+id/kisiEkle_ad_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,6 +59,7 @@
         android:hint="Telefon Numarası"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/kisiEkle_soyad_text" />
@@ -52,9 +68,10 @@
         android:id="@+id/kisiEkle_ekle_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="40dp"
         android:text="Ekle"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/kisiEkle_tel_no_text" />
+        app:layout_constraintTop_toBottomOf="@+id/kisiEkle_aciklama" />
 </androidx.constraintlayout.widget.ConstraintLayout>
