--- a/app/src/main/res/layout/fragment_ana_sayfa.xml
+++ b/app/src/main/res/layout/fragment_ana_sayfa.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Fragment.AnasayfaFragment">
+    android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rehber_recycler_view"
