--- a/app/src/main/res/layout/fragment_kisi_detay.xml
+++ b/app/src/main/res/layout/fragment_kisi_detay.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Fragment.KisiDetayFragment">
+    android:layout_height="match_parent">
 
     <EditText
         android:id="@+id/kisiDetay_aciklama"
