--- a/app/src/main/res/navigation/anasayfa_nav_graph.xml
+++ b/app/src/main/res/navigation/anasayfa_nav_graph.xml
@@ -3,40 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/anasayfa_nav_graph"
-    app:startDestination="@id/anasayfaFragment">
-
+    app:startDestination="@id/anaSayfaFragment">
     <fragment
-        android:id="@+id/anasayfaFragment"
-        android:name="com.bilgehankalay.gizlirehber.Fragment.AnasayfaFragment"
-        android:label="fragment_anasayfa"
-        tools:layout="@layout/fragment_anasayfa" >
+        android:id="@+id/anaSayfaFragment"
+        android:name="com.bilgehankalay.gizlirehber.Fragments.AnaSayfaFragment"
+        android:label="fragment_ana_sayfa"
+        tools:layout="@layout/fragment_ana_sayfa" >
         <action
             android:id="@+id/anasayfa_to_kisiekle"
             app:destination="@id/kisiEkleFragment" />
         <action
             android:id="@+id/anasayfa_to_kisidetay"
-            app:destination="@id/kisiDetayFragment" />
+            app:destination="@id/anasayfa_to_kisidetay" />
     </fragment>
     <fragment
         android:id="@+id/kisiEkleFragment"
-        android:name="com.bilgehankalay.gizlirehber.Fragment.KisiEkleFragment"
-        android:label="fragment_kisi_ekle"
-        tools:layout="@layout/fragment_kisi_ekle" >
+        android:name="com.bilgehankalay.gizlirehber.Fragments.KisiEkleFragment"
+        android:label="KisiEkleFragment" >
         <action
             android:id="@+id/kisiEkle_to_anasayfa"
-            app:destination="@id/anasayfaFragment"
-            app:popUpTo="@id/anasayfaFragment"
+            app:destination="@id/anaSayfaFragment"
+            app:popUpTo="@id/anaSayfaFragment"
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
-        android:id="@+id/kisiDetayFragment"
-        android:name="com.bilgehankalay.gizlirehber.Fragment.KisiDetayFragment"
-        android:label="fragment_kisi_detay"
-        tools:layout="@layout/fragment_kisi_detay" >
+        android:id="@+id/anasayfa_to_kisidetay"
+        android:name="com.bilgehankalay.gizlirehber.Fragments.KisiDetayFragment"
+        android:label="KisiDetayFragment" >
         <action
             android:id="@+id/kisiDetay_to_anasayfa"
-            app:destination="@id/anasayfaFragment"
-            app:popUpTo="@id/anasayfaFragment"
+            app:destination="@id/anaSayfaFragment"
+            app:popUpTo="@id/anaSayfaFragment"
             app:popUpToInclusive="true" />
         <argument
             android:name="kisi"
