--- a/app/src/main/res/layout/rehber_card_tasarim.xml
+++ b/app/src/main/res/layout/rehber_card_tasarim.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="15dp"
@@ -18,8 +19,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:text="Telefon Numarası"
-            android:textAlignment="viewStart"
+            tools:text="Telefon Numarası"
+            android:textAlignment="textStart"
             android:textColor="#000000"
             android:textSize="22sp"
             android:textStyle="bold"
@@ -35,7 +36,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:text="Ad Soyad"
+            tools:text="Ad Soyad"
+            android:textAlignment="textStart"
             android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -45,14 +47,25 @@
         <Button
             android:id="@+id/kisi_sil_button"
             android:layout_width="90dp"
-            android:layout_height="40dp"
+            android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            android:text="Sil"
+            android:text="@string/sil"
             app:icon="@drawable/delete"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/kisi_telno_text_view" />
+
+        <Button
+            android:id="@+id/kisi_ara_button"
+            android:layout_width="100dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/ara"
+            app:icon="@drawable/call"
+            app:layout_constraintEnd_toStartOf="@+id/kisi_sil_button"
             app:layout_constraintTop_toBottomOf="@+id/kisi_telno_text_view" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
