--- a/app/src/main/res/layout/fragment_kisi_detay.xml
+++ b/app/src/main/res/layout/fragment_kisi_detay.xml
@@ -37,19 +37,20 @@
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
         android:weightSum="3"
-        app:layout_constraintTop_toBottomOf="@+id/kisiDetay_soyad"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/kisiDetay_soyad">
 
         <com.hbb20.CountryCodePicker
             android:id="@+id/kisiDetay_tel_no_ccp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="1.3"
             android:gravity="center"
             app:ccp_autoDetectCountry="true"
             app:ccp_showNameCode="true"
@@ -59,7 +60,7 @@
             android:id="@+id/kisiDetay_tel_no_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="1.7"
             android:hint="@string/phone_number"
             android:inputType="phone"
             android:maxLength="10"
@@ -99,6 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="@string/guncelle"
+        app:icon="@drawable/update"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
