--- a/app/src/main/res/layout/rehber_card_tasarim.xml
+++ b/app/src/main/res/layout/rehber_card_tasarim.xml
@@ -46,13 +46,13 @@
 
         <Button
             android:id="@+id/kisi_sil_button"
-            android:layout_width="90dp"
-            android:layout_height="48dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/sil"
-            app:icon="@drawable/delete"
+            android:background="@drawable/delete"
+            app:iconPadding="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/kisi_telno_text_view" />
@@ -61,11 +61,12 @@
             android:id="@+id/kisi_ara_button"
             android:layout_width="100dp"
             android:layout_height="48dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
             android:text="@string/ara"
+            app:cornerRadius="15dp"
             app:icon="@drawable/call"
-            app:layout_constraintEnd_toStartOf="@+id/kisi_sil_button"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/kisi_telno_text_view" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
