whatsapp call and mesaage buttons added

--- a/app/src/main/res/layout/fragment_kisi_detay.xml
+++ b/app/src/main/res/layout/fragment_kisi_detay.xml
@@ -53,6 +53,7 @@
             android:layout_weight="1.3"
             android:gravity="center"
             app:ccp_autoDetectCountry="true"
+            app:ccp_rememberLastSelection="true"
             app:ccp_showNameCode="true"
             app:ccp_textSize="16sp" />
 
