--- a/app/src/main/res/layout/fragment_kisi_ekle.xml
+++ b/app/src/main/res/layout/fragment_kisi_ekle.xml
@@ -78,6 +78,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1.3"
             android:gravity="center"
+            app:ccp_rememberLastSelection="true"
             app:ccp_autoDetectCountry="true"
             app:ccp_showNameCode="true"
             app:ccp_textSize="16sp" />
