Ayarlar ekranı oluşturuldu. Ayarlar ekranına tema seçenekleri eklendi. Karanlık tema eklendi. Tasarım değişikli yapıldı. Hatalar giderildi.

--- a/app/src/main/res/navigation/anasayfa_nav_graph.xml
+++ b/app/src/main/res/navigation/anasayfa_nav_graph.xml
@@ -44,4 +44,9 @@
         android:name="com.bilgehankalay.gizlirehber.Fragments.LogFragment"
         android:label="fragment_log"
         tools:layout="@layout/fragment_log" />
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.bilgehankalay.gizlirehber.Fragments.SettingsFragment"
+        android:label="fragment_settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
