--- a/app/src/main/res/menu/button_nav.xml
+++ b/app/src/main/res/menu/button_nav.xml
@@ -2,4 +2,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/anaSayfaFragment" android:icon="@drawable/contacts" android:title="@string/ana_sayfa"/>
     <item android:id="@id/logFragment" android:icon="@drawable/history" android:title="@string/gecmis"/>
+    <item android:id="@+id/settingsFragment" android:icon="@drawable/settings" android:title="@string/ayarlar"/>
 </menu>
